# SocialAi

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  SECURITY.md  SECURITY_SUMMARY.md  check-status.sh  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
apps/admin/: COMPLETION_SUMMARY.md  SETUP.md  angular.json  package.json
apps/public/: package.json
contracts/core/: ClaimManager.sol  SocialAiAdmin.sol  SocialAiRegistry.sol
contracts/interfaces/: IClaimManager.sol  IIdentityVerifier.sol  ISocialAiRegistry.sol
contracts/libraries/: CryptographyLib.sol
contracts/storage/: ClaimStorage.sol  RegistryStorage.sol
contracts/verifiers/: EthereumVerifier.sol  FarcasterVerifier.sol  SolanaVerifier.sol
db/: schema.sql
desktop-admin/: README.md  index.html  package.json
desktop-admin/src-tauri/: Cargo.toml  tauri.conf.json
desktop-admin/src-tauri/icons/: README.md
desktop-admin/src-tauri/src/: main.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md  README.md  TESTING.md  TROUBLESHOOTING.md  UIUXSPECTS.md
docs/screenshots/: .gitkeep  README.md
node/: package.json  socialai.node.js
scripts/: build-desktop-admin.js  build-desktop-admin.sh  setup.js
src/node/: socialai.node.ts
src/shared/: index.ts
src/workers/: ai.worker.ts  blockchain.worker.ts  farcaster.worker.ts  reddit.worker.ts
workers/: ai.worker.js  base.worker.js  ethereum.worker.js  farcaster.worker.js  package.json  reddit.worker.js  search.worker.js  solana.worker.js
(+20 files in other folders)
