[package]
name = "socialai-admin"
version = "0.1.0"
description = "SocialAi Desktop Admin"
authors = ["SocialAi Team"]
license = "MIT"
repository = "https://github.com/SMSDAO/SocialAi"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
